--- a/src/Components/Homepage/Folder.scss
+++ b/src/Components/Homepage/Folder.scss
@@ -4,16 +4,23 @@
   overflow: hidden;
   padding: 0.6rem;
 
+  &:hover {
+    background-color: #f5f5f5;
+  }
+
   .folder {
     align-items: center;
     border-radius: 9999px;
+    color: black;
     column-gap: 1rem;
+    cursor: pointer;
     display: flex;
     height: fit-content;
     justify-content: space-between;
     min-height: 4rem;
     overflow: hidden;
     position: relative;
+    text-decoration: none;
   }
 
   .image {
