--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,7 +7,7 @@
   .title {
     font-family: "Open Sans ExtraBold", sans-serif;
     font-size: 2rem;
-    margin: 1rem 0;
+    margin: 0.4rem 0 1.2rem 0;
     text-align: center;
   }
 
