--- a/src/Components/Folder/Folder.scss
+++ b/src/Components/Folder/Folder.scss
@@ -1,5 +1,5 @@
 .folder-wrapper {
-  border-radius: 9999px;
+  border-radius: 8px;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 0.6rem;
@@ -10,27 +10,21 @@
 
   .folder {
     align-items: center;
-    border-radius: 9999px;
     color: black;
     column-gap: 1rem;
     cursor: pointer;
     display: flex;
     height: fit-content;
     justify-content: space-between;
-    min-height: 4rem;
+    min-height: 3rem;
     overflow: hidden;
     position: relative;
     text-decoration: none;
   }
 
-  .image {
-    height: 4rem;
-    img {
-      aspect-ratio: 1;
-      border-radius: 50%;
-      height: 100%;
-      object-fit: cover;
-    }
+  .space {
+    height: 3rem;
+    width: 4rem;
   }
 
   .title {
