--- a/src/Components/Folder/Folder.scss
+++ b/src/Components/Folder/Folder.scss
@@ -1,11 +1,12 @@
 .folder-wrapper {
+  background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 0.6rem;
 
   &:hover {
-    background-color: #f5f5f5;
+    background-color: #fff;
   }
 
   .folder {
