--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-bottom: 2rem;
   width: 100%;
 
   .product {
     align-items: center;
+    background-color: #f5f5f5;
     border-radius: 9999px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
     color: black;
@@ -21,7 +23,7 @@
     text-decoration: none;
 
     &:hover {
-      background-color: #f5f5f5;
+      background-color: #fff;
     }
   }
 
